[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routellect"
version = "0.1.0"
description = "An open source LLM routing and issue-runner module."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "python-dotenv>=1,<2",
]

[project.scripts]
routellect = "routellect.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
